#39 javadoc altered